
ALPHA v0.0.0.10
    - Changed static code methods to a single lookup in codes.cfg, with kwargs for necessary parameters
    - Refined file location predictor, moved directory and file type specifications to ext.cfg
    - Switched to localhost:8080
    - Split CSS and JS into separate folders

ALPHA v0.0.0.11
    - Payments are now written to transactions.log
    - Added login; signup now includes login cookie
    - Added fair support for economy.dat in <class Account>
    - Added field TotalCredits in economy.dat
    - You can now send integer status codes via send()

#------------MAJOR UPDATE------------#

ALPHA v0.0.1.0
    - Added render()
    - Rendering and its options should be accessed from attach_file()
    - The navigation bar is now rendered from a function and navbar.cfg
    - Removed all instances of send_file() in main.py, replaced with attach_file()
    - Overhauled main.py response handling; now creates a single response to be modified throughout handle() and sent at the end
    - set_status_code now automatically calls Response.code(), allowing use of integers and kwargs
    - Added account.html (sent through /home.html if logged in)

ALPHA v0.0.1.1
    - Response can now take codes and bodies in init
    - Changes to header field management
    - Fixed a problem where the navbar wouldn't load in the right order
    - Extensive work on account.html

ALPHA v0.0.1.2
    - Several bug fixes throughout main.py and server.py
    - Changed button styles
    - Properly integrated account.html with main.py; for testing purposes, visiting home.html automatically logs you in as Central Bank
    - navbar is handled more by Response
    - Logout button in account.html is functional
    - Actions now have .act extension in main.py

ALPHA v0.0.1.3
    - Created template.html, login.html, news.html
    - Converted login to POST; login.html works
    - Changed navbar items and links (needs diff when logged in)

ALPHA v0.0.1.4
    - 