@@ -5,11 +5,13 @@ Yovel Key-Cohen
 """
 
 class Account:
-    def __init__(self, username, password, id):
+    def __init__(self, firstname, lastname, username, password, id):
         self.id = id
         self.balance = 0
         self.username = username
         self.password = password
+        self.firstname = firstname
+        self.lastname = lastname
 
     def pay(self, amt, account):
         if amt <= self.balance:
