@@ -14,6 +14,7 @@ input{
     font-size: 1.1em;
     padding: 5px;
     font-family: inherit;
+    margin: 5px;
 }
 
 a{
@@ -27,9 +28,7 @@ body{
     background-color: #FFF;
     font-family: "Corbel", sans-serif;
     font-size: 100%;
-    /*background-image: url("white_background.png");
-    background-size: 100%;
-    background-repeat: no-repeat;*/
+    overflow: auto;
 }
 
 .background-img{
