@@ -104,4 +104,5 @@ ALPHA v0.0.1.3
     - Changed navbar items and links (needs diff when logged in)
 
 ALPHA v0.0.1.4
-    - 
+    - Working sign-up page, accessible through login.html
+    - Signup action is now POST-based
